# macscript

./: .gitmodules  README.md  cabal.project  macscript.cabal
extensions/macscript-menubar/: cabal.project  macscript-menubar.cabal
extensions/macscript-menubar/cbits/: menubar.m
extensions/macscript-menubar/src/MacScript/: MenuBar.hs
extensions/macscript-wm/: README.md  cabal.project  macscript-wm.cabal
extensions/macscript-wm/app/: Main.hs
extensions/macscript-wm/src/: Utils.hs
extensions/macscript-wm/src/MacScript/: WM.hs
extensions/macscript-wm/src/MacScript/WM/: #Event.hs#  Core.hs  DefaultConfig.hs  Event.hs  Layout.hs  Operations.hs
extensions/macscript-wm/src/MacScript/WM/Layouts/: Maximized.hs  TwoPaned.hs
macos-extras/: macos-extras.cabal
macos-extras/cbits/: application.m  display.m  keyboard.c  mouse.m  notification.m  object.m  workspace.m
macos-extras/src/MacSdk/: Prism.hs
macos-extras/src/MacSdk/Framework/: AppKit.hs  Carbon.hs  Foundation.hs  Keyboard.hs  NSObject.hs  Types.hs
macos-extras/src/MacSdk/Framework/AppKit/: CoreApp.hs  Event.hs  Screen.hs
macos-extras/src/MacSdk/Framework/AppKit/CoreApp/: Application.hs  Window.hs
macos-extras/src/MacSdk/Framework/Carbon/: Foreign.hs  PSN.hsc  Process.hs
macos-extras/src/MacSdk/Framework/Foundation/: Notification.hs  Object.hs  OperationQueue.hs  String.hs  Workspace.hs
src/: MacScript.hs
src/Control/Monad/IO/: Lifted.hs
src/MacScript/: App.hs  AppTypes.hs  Display.hs  Error.hs  Event.hs  Interactive.hs  Keyboard.hs  Load.hs  Mouse.hs  Prelude.hs  Process.hs  Rectangle.hs  Space.hs  Window.hs
src/MacScript/Internal/: App.hs  Display.hs  Error.hs  Prelude.hs  Process.hs  Space.hs  Window.hs
