name:           macscript
version:        0.0.1.0
synopsis:       Mac OS desktop automation library
description:    Please see the README on Github
category:       System
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      MacScript
      MacScript.App
      MacScript.Display
      MacScript.Error
      MacScript.Event
      MacScript.Interactive
      MacScript.Keyboard
      MacScript.Load
      MacScript.Mouse
      MacScript.Prelude
      MacScript.Process
      MacScript.Rectangle
      MacScript.Space
      MacScript.Window

      MacScript.Internal.Process
      MacScript.Internal.App
      MacScript.Internal.Window
  other-modules:
      Control.Monad.IO.Lifted
      MacScript.AppTypes

      Paths_macscript
  hs-source-dirs:
      src
  default-extensions:
      RecordWildCards
      TupleSections
      GeneralizedNewtypeDeriving
      LambdaCase
  ghc-options:
      -Wall
      -Wno-unused-top-binds
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -Werror
  build-depends:
      base >=4.7 && <5
    , containers
    , exceptions
    , extra
    , microlens
    , monad-loops
    , mtl
    , profunctors
    , stm
    , tagged
    , transformers
    , unliftio-core
    , macos-corelibs
    , macos-extras
  default-language: Haskell2010
