name:           macscript-menubar
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    cbits/menubar.m

library
  exposed-modules:
      MacScript.MenuBar
  other-modules:
      Paths_macscript_menubar
  hs-source-dirs:
      src
  default-extensions:
      RecordWildCards
      TupleSections
      LambdaCase
  ghc-options:
      -Wall
      -Wno-unused-top-binds
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
  cc-options:
      -Wno-deprecated
      -Wno-int-to-void-pointer-cast
  include-dirs:
      cbits
  c-sources:
      cbits/menubar.m
  frameworks:
      Carbon, Cocoa
  build-depends:
      base >=4.7 && <5
    , macos-corelibs
    , managed
    -- , constraints
    -- , containers
    -- , macos-corelibs
    -- , managed
    -- , microlens
    -- , mtl
    -- , profunctors
    -- , transformers
  default-language: Haskell2010
